[gd_scene load_steps=2 format=3 uid="uid://c8oodc6xy0j4g"]

[ext_resource type="Script" uid="uid://dtfltgdm6e8ri" path="res://components/side_by_side_viewer.gd" id="1_77cni"]

[node name="SideBySideViewer" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)
script = ExtResource("1_77cni")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseBtn" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "❌ Close"

[node name="SplitView" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SplitView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SplitView/LeftPanel"]
layout_mode = 2

[node name="ColSelectLeft" type="OptionButton" parent="MarginContainer/VBoxContainer/SplitView/LeftPanel/Header"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelLeft" type="Label" parent="MarginContainer/VBoxContainer/SplitView/LeftPanel/Header"]
layout_mode = 2

[node name="ContentContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SplitView/LeftPanel"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ImageRect" type="TextureRect" parent="MarginContainer/VBoxContainer/SplitView/LeftPanel/ContentContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TextEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer/SplitView/LeftPanel/ContentContainer"]
visible = false
layout_mode = 2
wrap_mode = 1

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SplitView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SplitView/RightPanel"]
layout_mode = 2

[node name="ColSelectRight" type="OptionButton" parent="MarginContainer/VBoxContainer/SplitView/RightPanel/Header"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelRight" type="Label" parent="MarginContainer/VBoxContainer/SplitView/RightPanel/Header"]
layout_mode = 2

[node name="ContentContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SplitView/RightPanel"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ImageRect" type="TextureRect" parent="MarginContainer/VBoxContainer/SplitView/RightPanel/ContentContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TextEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer/SplitView/RightPanel/ContentContainer"]
visible = false
layout_mode = 2
wrap_mode = 1

[node name="NavPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -71.0
offset_right = 126.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavPanel"]
layout_mode = 2

[node name="BtnPrevRow" type="Button" parent="NavPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "▲"

[node name="PositionLabel" type="Label" parent="NavPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1 / 100"

[node name="BtnNextRow" type="Button" parent="NavPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "▼"
